<resources>
    <string name="app_name" translatable="false">Gym Tracker</string>
    <string name="nombre" translatable="false">%d</string>
    <string name="default_temps_restant" translatable="false">0:00</string>
    <string name="default_secondes" translatable="false">0</string>
    <string name="default_minutes" translatable="false">2</string>
    <string name="heure_formatee" translatable="false">%d:%02d</string>
    <string name="chrono_button_text">Commencer</string>
    <string name="titre_chrono">Chronomètre temps de repos</string>
    <string name="rebours">À rebours</string>
    <string name="croissant">Croissant</string>
    <string name="erreur_api">Erreur de connexion à l\'api</string>
    <string name="connexion_api">Récuparations des exercices…</string>
    <string name="exercice_titre">Exercices</string>
    <string name="muscle_cible">Muscle ciblé</string>
    <string name="equipement_requis">Equipement requis</string>
    <string name="difficult_de_l_exercice">Difficulté de l\'exercice</string>
    <string name="pratiquant_debutant">Pratiquant débutant</string>
    <string name="pratiquant_intermediaire">Pratiquant intermédiaire</string>
    <string name="pratiquant_confirme">Pratiquant confirme</string>
    <string name="mise_en_place_simple">Mise en place simple</string>
    <string name="mise_en_place_detaillee">Mise en place détaillée</string>
    <string name="bienvenue_sur_gymtracker">Bienvenue sur GymTracker !</string>
    <string name="seance_du_jour">Séance du jour :</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="annuler">Annuler</string>
    <string name="nom_du_planning">Nom du planning</string>
    <string name="nom_de_la_seance">Nom de la séance</string>
    <string name="series">Séries</string>
    <string name="repetitions">Répétitions</string>
    <string name="notes">Notes supplémentaires</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="dimanche">Dimanche</string>
    <string name="no_equipment">Besoin de rien\n(envie de toi)</string>
    <string name="erreur_exercice">La séance doit comporter au moins un exercice</string>
    <string name="nouveau">Nouveau</string>
    <string name="plannings">Plannings</string>
    <string name="accueil">Accueil</string>
    <string name="exercices">Exercices</string>
    <string name="chronom_tre">Chronomètre</string>
    <string name="quitter">Quitter</string>
    <string name="ajouter_exercice">Ajouter un exercice</string>
    <string name="creation_seance">Création séance</string>
    <plurals name="exercice">
        <item quantity="one">%d exercice</item>
        <item quantity="other">%d exercices</item>
    </plurals>
    <plurals name="plural_series">
        <item quantity="one">%d serie</item>
        <item quantity="other">%d series</item>
    </plurals>
    <plurals name="plural_reps">
        <item quantity="one">%d répétition</item>
        <item quantity="other">%d répétitions</item>
    </plurals>
</resources>